<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">Info</string>
    <string name="accent_colors">Accent colors</string>
    <string name="accessibility">Accessibility</string>
    <string name="accessibility_notice">Stario needs access to accessibility services for this feature to work.</string>
    <string name="accessibility_service_description">"The service has the soul purpose of enabling lock screen gesture on the home screen. It doesn't collect or share data with any third party."</string>
    <string name="am_pm">12-Hour format</string>
    <string name="am_pm_info">AM/PM clock</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_info">App info</string>
    <string name="app_name">AgeOS</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apps">Applications</string>
    <string name="audio">Music</string>
    <string name="bad_weather_animations">Bad weather animations</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="briefing">Your briefing</string>
    <string name="bug_report">Report a bug or request a feature</string>
    <string name="bye">Bye!</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="carbon_contentDescription_checkBox">unlabelled checkbox</string>
    <string name="carbon_contentDescription_navigationIconUpButton">up</string>
    <string name="carbon_contentDescription_radioButton">unlabelled radiobutton</string>
    <string name="carbon_rowsPerPage">Rows per page:</string>
    <string name="categories">Categories</string>
    <string name="category_name">Name</string>
    <string name="change_color">Change accent color</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_connection">Check your internet connection</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="create_a_note">Create a note</string>
    <string name="create_a_widget">Create a widget</string>
    <string name="default_text">Default</string>
    <string name="donate">Support development ☕</string>
    <string name="drag_to_remove">Drag to remove</string>
    <string name="dynamic">Dynamic</string>
    <string name="edit_feeds">Edit feeds</string>
    <string name="enable_media_player">Enable media player from settings ↗</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="feature_notice">Feature notice</string>
    <string name="feeds">Feeds</string>
    <string name="finance">Finance</string>
    <string name="force_dark">Force dark mode</string>
    <string name="forecast_animations">Forecast animations</string>
    <string name="games">Games</string>
    <string name="good_afternoon">Good afternoon!</string>
    <string name="good_evening">Good evening!</string>
    <string name="good_morning">Good morning!</string>
    <string name="gray_scale_icons">Gray scale icons</string>
    <string name="handleimage">handleImage</string>
    <string name="health">Health</string>
    <string name="help_translate">Help translate</string>
    <string name="hidden_apps">Hidden apps</string>
    <string name="hide_applications">Hide applications</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hide_status_bar">Hide status bar</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="icon_pack">Icon pack</string>
    <string name="images">Photography</string>
    <string name="import_new_feed">Import new feed</string>
    <string name="installed_icon_packs">Installed icon packs</string>
    <string name="invalid_rss">Invalid RSS link</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="item_view_role_description">Tab</string>
    <string name="legacy_launch_animations">Native animations</string>
    <string name="license_many">Licenses</string>
    <string name="license_one">License</string>
    <string name="link_rss_feed">Link RSS feed</string>
    <string name="lock_gesture">→ Double tap to lock gesture</string>
    <string name="m3_ref_typeface_brand_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_brand_regular">sans-serif</string>
    <string name="m3_ref_typeface_plain_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_plain_regular">sans-serif</string>
    <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_accelerate">cubic-bezier(0.3, 0, 0.8, 0.2)</string>
    <string name="m3_sys_motion_easing_emphasized_decelerate">cubic-bezier(0.1, 0.7, 0.1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_path_data">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
    <string name="m3_sys_motion_easing_legacy">cubic-bezier(0.4, 0, 0.2, 1)</string>
    <string name="m3_sys_motion_easing_legacy_accelerate">cubic-bezier(0.4, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_legacy_decelerate">cubic-bezier(0, 0, 0.2, 1)</string>
    <string name="m3_sys_motion_easing_linear">cubic-bezier(0, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_standard">cubic-bezier(0.2, 0, 0, 1)</string>
    <string name="m3_sys_motion_easing_standard_accelerate">cubic-bezier(0.3, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_standard_decelerate">cubic-bezier(0, 0, 0, 1)</string>
    <string name="maps">Navigation</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_24h_suffix">%1$s hours</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">"%1$s o'clock"</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="material_slider_range_end">Range end</string>
    <string name="material_slider_range_start">Range start</string>
    <string name="material_slider_value">Value</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_clock_mode_description">Switch to clock mode for the time input.</string>
    <string name="material_timepicker_hour">Hour</string>
    <string name="material_timepicker_minute">Minute</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="material_timepicker_select_time">Select time</string>
    <string name="material_timepicker_text_input_mode_description">Switch to text input mode for the time input.</string>
    <string name="media_controls">Home screen media controls and track info</string>
    <string name="media_player">Media player</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="monochrome">Load all application icons in monochrome</string>
    <string name="month_apr">Apr</string>
    <string name="month_april">April</string>
    <string name="month_aug">Aug</string>
    <string name="month_august">August</string>
    <string name="month_dec">Dec</string>
    <string name="month_december">December</string>
    <string name="month_feb">Feb</string>
    <string name="month_february">February</string>
    <string name="month_jan">Jan</string>
    <string name="month_january">January</string>
    <string name="month_jul">Jul</string>
    <string name="month_july">July</string>
    <string name="month_jun">Jun</string>
    <string name="month_june">June</string>
    <string name="no_feeds">No Feeds</string>
    <string name="proceed_button">Proceed</string>
    <string name="return_button">Return</string>
    <string name="rss_collection">RSS collection</string>
    <string name="use_accessibility">Use accessibility</string>
</resources>