<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/root" android:layout_width="fill_parent" android:layout_height="wrap_content" android:forceDarkAllowed="false"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <carbon.widget.ConstraintLayout android:background="?colorOnPrimary" android:layout_width="40.0dip" android:layout_height="4.0dip" android:layout_marginTop="20.0dip" android:alpha="0.5" app:carbon_cornerRadius="2.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView android:textSize="20.0sp" android:textColor="?colorOnPrimary" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/feature_notice" android:fontFamily="@font/dm_sans_medium_italic" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginTop="30.0dip" android:layout_marginBottom="30.0dip" android:src="@drawable/ic_stario" android:scaleType="fitCenter" android:layout_marginStart="30.0dip" android:layout_marginEnd="20.0dip" />
        <com.google.android.material.materialswitch.MaterialSwitch android:textSize="20.0sp" android:textColor="?colorOnPrimary" android:layout_gravity="center" android:id="@id/animation" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="false" android:text="@string/use_accessibility" android:fontFamily="@font/dm_sans_bold" android:paddingEnd="30.0dip" android:letterSpacing="-0.04" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="17.0sp" android:textColor="?colorOnPrimary" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/accessibility_notice" android:fontFamily="@font/dm_sans_regular" android:layout_marginStart="50.0dip" android:layout_marginEnd="50.0dip" />
        <TextView android:textSize="17.0sp" android:textColor="?colorOnPrimary" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/accessibility_service_description" android:fontFamily="@font/dm_sans_regular" android:layout_marginStart="50.0dip" android:layout_marginEnd="50.0dip" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <carbon.widget.TextView android:textSize="20.0sp" android:textColor="?colorOnPrimary" android:gravity="center" android:id="@id/cancel" android:padding="15.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:layout_marginBottom="30.0dip" android:text="@string/return_button" android:layout_weight="1.0" android:fontFamily="@font/dm_sans_medium_italic" android:layout_marginStart="30.0dip" android:layout_marginEnd="15.0dip" app:carbon_cornerRadius="200.0dip" />
            <carbon.widget.TextView android:textSize="20.0sp" android:textColor="?colorOnPrimary" android:gravity="center" android:id="@id/proceed" android:padding="15.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:layout_marginBottom="30.0dip" android:text="@string/proceed_button" android:layout_weight="1.0" android:fontFamily="@font/dm_sans_medium_italic" android:layout_marginStart="15.0dip" android:layout_marginEnd="30.0dip" app:carbon_cornerRadius="200.0dip" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>