<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/root" android:layout_width="fill_parent" android:layout_height="fill_parent" android:forceDarkAllowed="false"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="20.0sp" android:textColor="?colorOnPrimary" android:gravity="center" android:id="@id/placeholder" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/no_feeds" android:alpha="0.5" android:fontFamily="@font/dm_sans_bold_italic" />
    <LinearLayout android:orientation="vertical" android:fitsSystemWindows="true" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:id="@id/help" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:paddingStart="30.0dip" android:paddingEnd="30.0dip" android:transitionGroup="true">
            <ImageView android:layout_gravity="center_vertical" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0sp" android:src="@drawable/ic_help" />
            <TextView android:textSize="30.0sp" android:textColor="?colorOnPrimary" android:ellipsize="end" android:paddingTop="15.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/feeds" android:lines="1" android:fontFamily="@font/dm_sans_black" android:paddingStart="15.0dip" android:paddingEnd="30.0dip" android:letterSpacing="-0.04" />
        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <androidx.recyclerview.widget.RecyclerView android:id="@id/pages" android:clipChildren="true" android:clipToPadding="false" android:layoutAnimation="@anim/config_animation" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingStart="45.0dip" android:paddingEnd="45.0dip" />
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/left" android:background="@drawable/left_underlay" android:visibility="gone" android:layout_width="50.0dip" android:layout_height="fill_parent" android:alpha="0.0" app:layout_constraintStart_toStartOf="parent">
                <ImageView android:layout_width="40.0dip" android:layout_height="40.0dip" android:src="@drawable/ic_arrow_back" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/right" android:background="@drawable/right_underlay" android:visibility="gone" android:layout_width="50.0dip" android:layout_height="fill_parent" android:alpha="0.0" app:layout_constraintEnd_toEndOf="parent">
                <ImageView android:layout_width="40.0dip" android:layout_height="40.0dip" android:src="@drawable/ic_arrow_back" android:rotation="180.0" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/overlay" android:background="?colorPrimaryVariant" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:alpha="0.0" />
    <androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@id/constraint" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:id="@id/creator" android:background="@drawable/config_sheet" android:layout_width="fill_parent" android:layout_height="fill_parent" app:behavior_hideable="false" app:behavior_peekHeight="120.0dip" app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
            <carbon.widget.ConstraintLayout android:layout_gravity="center" android:background="?colorOnPrimary" android:layout_width="40.0dip" android:layout_height="4.0dip" android:layout_marginTop="20.0dip" android:alpha="0.5" app:carbon_cornerRadius="2.0dip" />
            <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <EditText android:textSize="20.0sp" android:textColor="?colorOnPrimary" android:ellipsize="start" android:gravity="center_horizontal" android:id="@id/query" android:background="@drawable/rss_background" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:hint="@string/import_new_feed" android:maxLines="1" android:inputType="textNoSuggestions|textUri" android:imeOptions="actionDone" android:textCursorDrawable="@drawable/cursor" android:fontFamily="@font/dm_sans_medium_italic" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" app:layout_constraintTop_toTopOf="parent" />
                <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/dummy" android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="@id/query" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" android:animateLayoutChanges="true">
                <TextView android:textSize="20.0sp" android:textColor="?colorOnPrimary" android:id="@id/plenary" android:padding="30.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rss_collection" android:lines="1" android:drawablePadding="5.0dip" android:fontFamily="@font/dm_sans_medium_italic" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
                <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/preview" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@id/plenary" app:layout_constraintTop_toTopOf="parent">
                    <TextView android:textSize="30.0sp" android:textColor="?colorOnPrimary" android:ellipsize="end" android:gravity="center" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:maxLines="2" android:fontFamily="@font/dm_sans_black" android:layout_marginStart="70.0dip" android:layout_marginEnd="70.0dip" android:letterSpacing="-0.04" />
                    <carbon.widget.TextView android:textSize="20.0sp" android:textColor="@color/text" android:gravity="center" android:id="@id/button" android:background="?colorAccent" android:paddingTop="12.0sp" android:paddingBottom="15.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/link_rss_feed" android:fontFamily="@font/dm_sans_medium_italic" android:paddingStart="20.0sp" android:paddingEnd="20.0sp" android:layout_marginStart="70.0dip" android:layout_marginEnd="70.0dip" app:carbon_cornerRadius="200.0dip" />
                </LinearLayout>
                <com.stario.launcher.ui.LoadingView android:id="@id/loading" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="30.0sp" app:color="?colorOnPrimary" app:layout_constraintBottom_toTopOf="@id/plenary" app:layout_constraintTop_toTopOf="parent" />
                <TextView android:textSize="20.0sp" android:textColor="?colorOnPrimary" android:gravity="center" android:id="@id/limit" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" android:fontFamily="@font/dm_sans_medium_italic" android:layout_marginStart="70.0dip" android:layout_marginEnd="70.0dip" app:layout_constraintBottom_toTopOf="@id/plenary" app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>