<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/root" android:layout_width="fill_parent" android:layout_height="wrap_content" android:forceDarkAllowed="false"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <carbon.widget.ConstraintLayout android:background="?colorOnPrimary" android:layout_width="40.0dip" android:layout_height="4.0dip" android:layout_marginTop="20.0dip" android:alpha="0.5" app:carbon_cornerRadius="2.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView android:textSize="20.0sp" android:textColor="?colorOnPrimary" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/accent_colors" android:fontFamily="@font/dm_sans_medium_italic" />
    <com.google.android.material.materialswitch.MaterialSwitch android:textSize="20.0sp" android:textColor="?colorOnPrimary" android:id="@id/force_dark" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/force_dark" android:fontFamily="@font/dm_sans_bold" android:paddingStart="30.0dip" android:paddingEnd="30.0dip" android:letterSpacing="-0.04" />
    <com.bosphere.fadingedgelayout.FadingEdgeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" app:fel_edge="left|right" app:fel_size_left="30.0dip" app:fel_size_right="30.0dip">
        <HorizontalScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:overScrollMode="never">
            <LinearLayout android:clipToPadding="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="30.0dip" android:paddingStart="20.0dip" android:paddingEnd="20.0dip">
                <carbon.widget.LinearLayout android:orientation="horizontal" android:id="@id/dynamic" android:background="?colorAccent" android:layout_width="wrap_content" android:layout_height="50.0dip" android:layout_margin="10.0dip" android:paddingEnd="8.0dip" app:carbon_cornerRadius="25.0dip">
                    <TextView android:textSize="18.0sp" android:textColor="@color/text" android:gravity="center" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginBottom="2.5sp" android:text="@string/dynamic" android:drawablePadding="4.0dip" android:fontFamily="@font/dm_sans_medium" android:paddingStart="15.0dip" android:paddingEnd="7.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
                    <ImageView android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:visibility="gone" android:layout_width="40.0dip" android:layout_height="50.0dip" android:src="@drawable/ic_check" />
                </carbon.widget.LinearLayout>
                <carbon.widget.ImageView android:id="@id/black" android:background="#ff868686" android:padding="10.0dip" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_margin="10.0dip" app:carbon_cornerRadius="25.0dip" />
                <carbon.widget.ImageView android:id="@id/red" android:background="#ffbf6796" android:padding="10.0dip" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_margin="10.0dip" app:carbon_cornerRadius="25.0dip" />
                <carbon.widget.ImageView android:id="@id/orange" android:background="#ffbf6d67" android:padding="10.0dip" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_margin="10.0dip" app:carbon_cornerRadius="25.0dip" />
                <carbon.widget.ImageView android:id="@id/yellow" android:background="#ffbfa267" android:padding="10.0dip" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_margin="10.0dip" app:carbon_cornerRadius="25.0dip" />
                <carbon.widget.ImageView android:id="@id/lime" android:background="#ffa7bf67" android:padding="10.0dip" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_margin="10.0dip" app:carbon_cornerRadius="25.0dip" />
                <carbon.widget.ImageView android:id="@id/turquoise" android:background="#ff67bf90" android:padding="10.0dip" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_margin="10.0dip" app:carbon_cornerRadius="25.0dip" />
                <carbon.widget.ImageView android:id="@id/green" android:background="#ff73bf67" android:padding="10.0dip" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_margin="10.0dip" app:carbon_cornerRadius="25.0dip" />
                <carbon.widget.ImageView android:id="@id/cyan" android:background="#ff67b9bf" android:padding="10.0dip" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_margin="10.0dip" app:carbon_cornerRadius="25.0dip" />
                <carbon.widget.ImageView android:id="@id/blue" android:background="#ff6784bf" android:padding="10.0dip" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_margin="10.0dip" app:carbon_cornerRadius="25.0dip" />
                <carbon.widget.ImageView android:id="@id/purple" android:background="#ff7f67bf" android:padding="10.0dip" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_margin="10.0dip" app:carbon_cornerRadius="25.0dip" />
                <carbon.widget.ImageView android:id="@id/pink" android:background="#ffb367bf" android:padding="10.0dip" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_margin="10.0dip" app:carbon_cornerRadius="25.0dip" />
            </LinearLayout>
        </HorizontalScrollView>
    </com.bosphere.fadingedgelayout.FadingEdgeLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/theme_preview" android:adjustViewBounds="true" />
        <com.stario.launcher.ui.ImageColorPreview android:id="@id/image" android:layout_width="0.0dip" android:layout_height="0.0dip" android:src="@drawable/theme_preview" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>